--- a/insights.html
+++ b/insights.html
@@ -131,9 +131,9 @@
             <button id="rotateBtn"></button>
             <div class="insights-content scroller-margin">
                   <ul class="item-wrapper">
-                        <li class="item one ux-designer agency holder">
-                              <a class="tag tagclick" id="js-tag ux-designer"></a>
-                              <a class="subtag tagclick" id="js-subtag agency"></a>
+                        <li class="item one creative freelance holder">
+                              <a class="tag tagclick" id="js-tag creative"></a>
+                              <a class="subtag tagclick" id="js-subtag freelance"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" />
                               </div>
@@ -142,9 +142,9 @@
                               </div>
                         </li>
 
-                        <li class="item two creative inhouse holder">
-                              <a class="tag tagclick" id="js-tag creative"></a>
-                              <a class="subtag tagclick" id="js-subtag inhouse"></a>
+                        <li class="item two graphic-designer freelance holder">
+                              <a class="tag tagclick" id="js-tag graphic-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag freelance"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" onerror="$(this).hide()"></img>
                               </div>
@@ -153,9 +153,9 @@
                                     </img>
                               </div>
                         </li>
-                        <li class="item three service-designer agency holder">
+                        <li class="item three service-designer inhouse holder">
                               <a class="tag  tagclick" id="js-tag service-designer"></a>
-                              <a class="subtag tagclick" id="js-subtag agency"></a>
+                              <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" onError=" $(this).hide();"">
                                     </img>
@@ -165,8 +165,8 @@
 
                               </div>
                         </li>
-                        <li class="item four ux-designer inhouse holder">
-                              <a class="tag  tagclick" id="js-tag ux-designer"></a>
+                        <li class="item four virtual-designer inhouse holder">
+                              <a class="tag  tagclick" id="js-tag virtual-designer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
@@ -191,8 +191,8 @@
 
                               </div>
                         </li>
-                        <li class="item six service-designer inhouse holder">
-                              <a class="tag tagclick" id="js-tag service-designer"></a>
+                        <li class="item six ux-designer inhouse holder">
+                              <a class="tag tagclick" id="js-tag ux-designer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
@@ -204,9 +204,9 @@
 
                               </div>
                         </li>
-                        <li class="item seven ux-designer inhouse holder">
-                              <a class="tag tagclick" id="js-tag ux-designer"></a>
-                              <a class="subtag tagclick" id="js-subtag inhouse"></a>
+                        <li class="item seven service-designer agency holder">
+                              <a class="tag tagclick" id="js-tag service-designer"></a>
+                              <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
                                     </img>
@@ -217,8 +217,8 @@
 
                               </div>
                         </li>
-                        <li class="item eight service-designer inhouse holder">
-                              <a class="tag" id="js-tag service-designer"></a>
+                        <li class="item eight videographer inhouse holder">
+                              <a class="tag" id="js-tag videographer"></a>
                               <a class="subtag" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
@@ -230,11 +230,23 @@
 
                               </div>
                         </li>
-                        <li class="item nine typographer freelance holder">
-                              <a class="tag" id="js-tag typographer"></a>
-                              <a class="subtag" id="js-subtag freelance"></a>
+                        <li class="item nine ux-designer agency holder">
+                              <a class="tag" id="js-tag ux-designer"></a>
+                              <a class="subtag" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
                                     <img class="journal" onError="$(this).hide();">
+                                    </img>
+                              </div>
+                              <div class="photograph-wrapper current">
+                                    <img class="photograph" onError="$(this).hide();">
+                                    </img>
+                              </div>
+                        </li>
+                        <li class="item ten digital-designer inhouse holder">
+                              <a class="tag" id="js-tag digital-designer"></a>
+                              <a class="subtag" id="js-subtag inhouse"></a>
+                              <div class="journal-wrapper">
+                                    <img class="journal" onError="$(this).find('.item').hide();">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
