dont hide person 9 error

--- a/insights.html
+++ b/insights.html
@@ -238,7 +238,7 @@
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph" onError="$(this).hide();">
+                                    <img class="photograph">
                                     </img>
                               </div>
                         </li>
