updated 'designer' list names

--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
             <li class="nav-item index"><a class=" nav-link">
                   <i class="arrow rotate"></i>10 Designers </a>
                <ul class="nested-list">
-                  <li><span class="number">1</span><a href="insights.html?designer=creative">videographer</a></li>
-                  <li><span class="number">3</span><a href="insights.html?designer=service-designer">service
+                  <li><span class="number">1</span><a href="insights.html?designer=creative">Creative</a></li>
+                  <li><span class="number">1</span><a href="insights.html?designer=graphic-designer">Graphic designer</a></li>
+                  <li><span class="number">3</span><a href="insights.html?designer=service-designer">Service
                         designers</a></li>
-                  <li><span class="number">1</span><a href="insights.html?designer=typographer">typographer</a></li>
-                  <li><span class="number">1</span><a href="insights.html?designer=creative">illustrator</a></li>
-                  <li><span class="number">3</span><a href="insights.html?designer=ux-designer">user experience</a>
-                  </li>
+                  <li><span class="number">1</span><a href="insights.html?designer=vr-designer">Virtual reality designer</a></li>
+                  <li><span class="number">2</span><a href="insights.html?designer=ux-designer">User experience</a></li>
+
+                  <li><span class="number">1</span><a href="insights.html?designer=Videographer">Videographer</a></li>
+
+                 
+
+
+
                </ul>
             </li>
             <li class="nav-item index"><a class=" nav-link">
