remove error script

--- a/insights.html
+++ b/insights.html
@@ -173,7 +173,7 @@
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph " onError="$(this).hide();">
+                                    <img class="photograph ">
                                     </img>
 
                               </div>
@@ -183,10 +183,10 @@
                               <a class="tag tagclick" id="js-tag service-designer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal" onError="$(this).hide();"> </img>
+                                    <img class="journal"> </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph" onError="$(this).hide();">
+                                    <img class="photograph">
                                     </img>
 
                               </div>
@@ -195,7 +195,7 @@
                               <a class="tag tagclick" id="js-tag ux-designer"></a>
                               <a class="subtag tagclick" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal" onError="$(this).hide();">
+                                    <img class="journal">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
@@ -208,11 +208,11 @@
                               <a class="tag tagclick" id="js-tag service-designer"></a>
                               <a class="subtag tagclick" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal" onError="$(this).hide();">
+                                    <img class="journal">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph" onError="$(this).hide();">
+                                    <img class="photograph">
                                     </img>
 
                               </div>
@@ -221,11 +221,11 @@
                               <a class="tag" id="js-tag videographer"></a>
                               <a class="subtag" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal" onError="$(this).hide();">
+                                    <img class="journal">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph" onError="$(this).hide();">
+                                    <img class="photograph">
                                     </img>
 
                               </div>
@@ -234,7 +234,7 @@
                               <a class="tag" id="js-tag ux-designer"></a>
                               <a class="subtag" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal" onError="$(this).hide();">
+                                    <img class="journal">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
@@ -246,11 +246,11 @@
                               <a class="tag" id="js-tag digital-designer"></a>
                               <a class="subtag" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
-                                    <img class="journal" onError="$(this).find('.item').hide();">
+                                    <img class="journal" onError="this.parentNode.parentNode.style.display='none'">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
-                                    <img class="photograph" onError="$(this).hide();">
+                                    <img class="photograph" onError="this.parentNode.parentNode.style.display='none'">
                                     </img>
                               </div>
                         </li>
